<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:background="@drawable/primary_image"
    tools:context=".Pages.Login.ForgetPassword_Page">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login_questionForget"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        android:layout_marginHorizontal="10dp"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Forget_note"
        android:layout_marginTop="15dp"
        android:textSize="18dp"
        android:layout_marginHorizontal="15dp"
        android:textColor="@color/white"

        />
    <EditText
        android:id="@+id/Forgot_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/Forgot_email"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/edit_text_style"
        android:layout_marginTop="13dp"
        android:drawableStart="@drawable/mail_outline_24"
        android:paddingStart="10dp"
        android:paddingEnd="13dp"
        android:drawablePadding="10dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="80dp"
        >

        <Button
            android:layout_width="150dp"
            android:id="@+id/Forget_cancelButton"
            android:layout_height="wrap_content"
            android:text="@string/Forget_cancelButton"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:background="@drawable/button_style"
            android:textSize="19dp"
            android:layout_gravity="center"
            android:layout_marginRight="7dp"


            />
        <Button
            android:id="@+id/Forget_sendButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/Forget_sendButton"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:background="@drawable/button_style"
            android:textSize="19dp"
            android:layout_marginLeft="7dp"

            android:layout_gravity="center"

            />

    </LinearLayout>


</LinearLayout>

