<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="bottom"
    android:layout_height="match_parent"
    android:background="@drawable/primary_image"
    tools:context=".Pages.Login.Login_Page">

    <EditText
        android:id="@+id/Login_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/Login_email"
        android:background="@drawable/edit_text_style"
        android:layout_marginHorizontal="40dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textSize="16dp"
        android:drawableStart="@drawable/person_24"
        android:drawablePadding="17dp"
        android:inputType="textEmailAddress"

        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        >
        <EditText
            android:id="@+id/Login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_style"
            android:layout_marginTop="13dp"
            android:hint="@string/Login_password"
            android:layout_marginHorizontal="40dp"
            android:paddingStart="18dp"
            android:drawableStart="@drawable/lock"
            android:paddingEnd="18dp"
            android:textSize="16dp"
            android:drawablePadding="18dp"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/Login_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="11dp"
        android:background="@drawable/button_style"
        android:text="@string/Login_button"
        android:textAllCaps="false"
        android:textSize="18dp"




        />
    <ProgressBar
        android:id="@+id/Login_progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="#BDBDBD"/>
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="29dp"

        >
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/Login_note"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginLeft="17dp"

            />
        <TextView
            android:id="@+id/Login_signup"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/Login_signup"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:textStyle="bold"

            />

    </LinearLayout>
    <TextView
        android:id="@+id/Login_questionForget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Login_questionForget"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="17dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="40dp"

        />
</LinearLayout>

