<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EEEEEE"
    tools:context=".Pages.Home.UpdateProfile_Page">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:src="@drawable/primary_image"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:id="@+id/myImage"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changephoto"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="19dp"
        android:layout_marginTop="7dp"
        android:id="@+id/changephoto"
        />
    <ProgressBar
        android:id="@+id/upload_Image_progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="#2979FF"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profilename"
        android:textSize="18dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/update_username"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profileemail"
        android:textSize="18dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/update_email"


        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profilephone"
        android:textSize="18dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"


        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/update_profile_phone"
        android:inputType="phone"

        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_gravity="center"
        android:layout_marginTop="55dp"
        >

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/profilecancel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:background="@drawable/button_style"
            android:textSize="19dp"
            android:layout_gravity="center"
            android:layout_marginRight="7dp"
            android:id="@+id/update_cancel_button"



            />
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/profileupdate"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/button_style2"
            android:textSize="19dp"
            android:layout_marginLeft="7dp"
            android:layout_gravity="center"
            android:id="@+id/update_save_button"

            />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/update_progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="10dp"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:layout_margin="30dp"
        android:indeterminateTint="#2979FF"/>



</LinearLayout>