<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EEEEEE"
    android:gravity="bottom"
    tools:context=".Pages.Home.Change_Password">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/padlock"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="70dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white"
            android:hint="@string/enternewpassword"
            android:paddingStart="10dp"
            android:id="@+id/new_password"


            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="10dp"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white"
            android:hint="@string/newpasswordagain"
            android:paddingStart="10dp"
            android:id="@+id/confirm_new_password"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/changepasswordbutton"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/change_password_button_style"
        android:textSize="19dp"
        android:layout_marginTop="140dp"
        android:layout_gravity="center"
        android:id="@+id/change_password_button"


        />
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelbutton"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:background="@drawable/button_style"
        android:textSize="19dp"
        android:layout_gravity="center"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/change_cancel_button"
        />
</LinearLayout>